// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates a store with a primitive value (nested stores) 1`] = `
Object {
  "get": 5,
  "getSerialized": "5",
  "getTypeof": "number",
  "self": [Function],
  "selfKeys": "[[non-object]]",
  "selfSerialized": undefined,
  "selfSpread": "[[non-object]]",
  "selfTypeof": "function",
}
`;

exports[`creates a store with a primitive value 1`] = `
Object {
  "get": 5,
  "getSerialized": "5",
  "getTypeof": "number",
  "self": [Function],
  "selfKeys": "[[non-object]]",
  "selfSerialized": undefined,
  "selfSpread": "[[non-object]]",
  "selfTypeof": "function",
}
`;

exports[`creates a store with an object (nested stores) 1`] = `
Object {
  "get": bound Object {
    "val": 25,
  },
  "getSerialized": "{\\"val\\":25}",
  "getTypeof": "object",
  "self": [Function],
  "selfKeys": Array [
    "val",
  ],
  "selfSerialized": undefined,
  "selfSpread": Object {
    "val": [Function],
  },
  "selfTypeof": "function",
}
`;

exports[`creates a store with an object 1`] = `
Object {
  "get": bound Object {
    "val": 25,
  },
  "getSerialized": "{\\"val\\":25}",
  "getTypeof": "object",
  "self": [Function],
  "selfKeys": Array [
    "val",
  ],
  "selfSerialized": undefined,
  "selfSpread": Object {
    "val": [Function],
  },
  "selfTypeof": "function",
}
`;

exports[`handles debugging inner values of stores (nested stores) 1`] = `
Object {
  "get": 25,
  "getSerialized": "25",
  "getTypeof": "number",
  "self": [Function],
  "selfKeys": "[[non-object]]",
  "selfSerialized": undefined,
  "selfSpread": "[[non-object]]",
  "selfTypeof": "function",
}
`;

exports[`handles debugging inner values of stores 1`] = `
Object {
  "get": 25,
  "getSerialized": "25",
  "getTypeof": "number",
  "self": [Function],
  "selfKeys": "[[non-object]]",
  "selfSerialized": undefined,
  "selfSpread": "[[non-object]]",
  "selfTypeof": "function",
}
`;

exports[`handles displaying the shape of arrays (nested stores) 1`] = `
Object {
  "get": bound Array [
    0,
    2,
    4,
    6,
  ],
  "getSerialized": "[0,2,4,6]",
  "getTypeof": "object",
  "self": [Function],
  "selfKeys": Array [
    "0",
    "1",
    "2",
    "3",
    "length",
  ],
  "selfSerialized": undefined,
  "selfSpread": Object {
    "0": [Function],
    "1": [Function],
    "2": [Function],
    "3": [Function],
    "length": [Function],
  },
  "selfTypeof": "function",
}
`;

exports[`handles displaying the shape of arrays (nested stores) 2`] = `
Array [
  [Function],
  [Function],
  [Function],
  [Function],
]
`;

exports[`handles displaying the shape of arrays 1`] = `
Object {
  "get": bound Array [
    0,
    2,
    4,
    6,
  ],
  "getSerialized": "[0,2,4,6]",
  "getTypeof": "object",
  "self": [Function],
  "selfKeys": Array [
    "0",
    "1",
    "2",
    "3",
    "length",
  ],
  "selfSerialized": undefined,
  "selfSpread": Object {
    "0": [Function],
    "1": [Function],
    "2": [Function],
    "3": [Function],
    "length": [Function],
  },
  "selfTypeof": "function",
}
`;

exports[`handles displaying the shape of arrays 2`] = `
Array [
  [Function],
  [Function],
  [Function],
  [Function],
]
`;
